--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,3 +129,14 @@
 }
 
 
+@layer utilities {
+  .text-neon {
+    text-shadow: 0 0 5px #00ffcc, 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 40px #00ffcc;
+  }
+  .text-shadow-neon {
+    text-shadow: 0 0 8px #00ffff, 0 0 16px #00ffff, 0 0 24px #00ffff;
+  }
+  .text-shadow {
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Ombre subtile */
+  }
+}
